tests/machine/x/pascal/cross_join.error
fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/cross_join.pas
cross_join.pas(35,16) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crcE0B4E8C7"
cross_join.pas(48,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcDFB44C97" to "TArray$1$crc7ED07D64"
cross_join.pas(50,35) Error: identifier idents no member "id"
cross_join.pas(51,43) Error: identifier idents no member "customerId"
cross_join.pas(52,46) Error: identifier idents no member "name"
cross_join.pas(53,38) Error: identifier idents no member "total"
cross_join.pas(59,41) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" expected "TArray$1$crcE0B4E8C7"
cross_join.pas(59,35) Error: Incompatible types: got "TFPGMap<System.Variant,System.Variant>" expected "TFPGMap<System.ShortString,System.Variant>"
cross_join.pas(62,14) Error: Incompatible types: got "TArray$1$crcE0B4E8C7" expected "TArray$1$crc7ED07D64"
cross_join.pas(66,35) Error: identifier idents no member "orderId"
cross_join.pas(66,76) Error: identifier idents no member "orderCustomerId"
cross_join.pas(67,40) Error: identifier idents no member "orderTotal"
cross_join.pas(68,15) Error: identifier idents no member "pairedCustomerName"
cross_join.pas(71) Fatal: There were 13 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
